Moved initial entries to alembic, and added division of subcategories

--- a/WebApp/templates/transactions.html
+++ b/WebApp/templates/transactions.html
@@ -134,6 +134,7 @@ document.addEventListener("DOMContentLoaded", function () {
                         {% else %}
                             <span>None</span>
                         {% endif %}
+                            <span><a href="sub_transactions/{{transaction.id}}">Split</a></a></span>
                     </td>
                     <td>
                         <form id="rowid_{{transaction.id}}" method="post">
