Added prototype management of categories, and new database scheme

--- a/WebApp/templates/base.html
+++ b/WebApp/templates/base.html
@@ -12,7 +12,7 @@
         <nav class="nav">
 
             <a class="nav-link" href="/transactions">Transactions</a>
-            <a class="nav-link" href="/categories">Categories Transactions</a>
+            <a class="nav-link" href="/categories">Categories</a>
             <a class="nav-link" href="/upload-csv">Upload CSV</a>
         </nav>
 
